*** 20010604_12 by db
- added UNKNOWN_TIME set to 20 seconds



*** 20010604_11 by jdc
* Round 2 of the cryptlinks modifications.  --enable-openssl and
  --disable-openssl now added to the configure option list.  I'll
  describe how they work via a small chart:

  +------------+------------+-------------+-----------------------+
  | Arguments  | SSL found? | CRYPT_LINKS | Result                |
  +------------+------------+-------------+-----------------------+
  | None       | Yes        | #define     | Cryptlinks enabled    |
  +------------+------------+-------------+-----------------------+
  | None       | No         | #define     | Error during 'make'   |
  +------------+------------+-------------+-----------------------+
  | None       | Yes        | #undef      | No cryptlink support  |
  +------------+------------+-------------+-----------------------+
  | None       | No         | #undef      | No cryptlink support  |
  +------------+------------+-------------+-----------------------+
  | --enable-  | Yes        | #define     | Cryptlinks enabled    |
  |   openssl  |            |             |                       |
  +------------+------------+-------------+-----------------------+
  | --enable-  | No         | #define     | Error during 'make'   |
  |   openssl  |            |             |                       |
  +------------+------------+-------------+-----------------------+
  | --enable-  | Yes        | #undef      | No cryptlink support  |
  |   openssl  |            |             |                       |
  +------------+------------+-------------+-----------------------+
  | --enable-  | No         | #undef      | No cryptlink support  |
  |   openssl  |            |             |                       |
  +------------+------------+-------------+-----------------------+
  | --disable- | N/A        | N/A         | No cryptlink support  |
  |   openssl  |            |             |                       |