@@ -1,1 +1,1 @@
-#define SERIALNUM "20010604_12"
+#define SERIALNUM "20010605_2"
