@@ -1,3 +1,8 @@
+*** 20010605_1 by kreator
+- add check_pidfile() that will check if daemon is already running
+- add setup_corefile() that will setup corefilesize to system max
+
+
 *** 20010604_12 by db
 - added UNKNOWN_TIME set to 20 seconds
 
